feat: match details
