# internal/gen/swagger2/models/match_team.go
@@ -1,0 +1,180 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// MatchTeam match team
+//
+// swagger:model MatchTeam
+type MatchTeam struct {
+
+	// clan name
+	// Required: true
+	ClanName string `json:"clan_name"`
+
+	// flag code
+	// Required: true
+	FlagCode string `json:"flag_code"`
+
+	// id
+	// Required: true
+	ID int32 `json:"id"`
+
+	// score
+	// Required: true
+	Score int32 `json:"score"`
+
+	// scoreboard
+	// Required: true
+	Scoreboard []MatchTeamScoreboard `json:"scoreboard"`
+}
+
+// Validate validates this match team
+func (m *MatchTeam) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateClanName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateFlagCode(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateScore(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateScoreboard(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MatchTeam) validateClanName(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("clan_name", "body", m.ClanName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *MatchTeam) validateFlagCode(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("flag_code", "body", m.FlagCode); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *MatchTeam) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", int32(m.ID)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *MatchTeam) validateScore(formats strfmt.Registry) error {
+
+	if err := validate.Required("score", "body", int32(m.Score)); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *MatchTeam) validateScoreboard(formats strfmt.Registry) error {
+
+	if err := validate.Required("scoreboard", "body", m.Scoreboard); err != nil {
+		return err
+	}
+
+	for i := 0; i < len(m.Scoreboard); i++ {
+
+		if err := m.Scoreboard[i].Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("scoreboard" + "." + strconv.Itoa(i))
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("scoreboard" + "." + strconv.Itoa(i))
+			}
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this match team based on the context it is used
+func (m *MatchTeam) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateScoreboard(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MatchTeam) contextValidateScoreboard(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Scoreboard); i++ {
+
+		if err := m.Scoreboard[i].ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("scoreboard" + "." + strconv.Itoa(i))
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("scoreboard" + "." + strconv.Itoa(i))
+			}
+			return err
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MatchTeam) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MatchTeam) UnmarshalBinary(b []byte) error {
+	var res MatchTeam
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
