# internal/gen/swagger2/restapi/operations/match/get_match_responses.go
@@ -1,0 +1,222 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package match
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+
+	"github.com/ysomad/uniplay/internal/gen/swagger2/models"
+)
+
+// GetMatchOKCode is the HTTP code returned for type GetMatchOK
+const GetMatchOKCode int = 200
+
+/*
+GetMatchOK OK
+
+swagger:response getMatchOK
+*/
+type GetMatchOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Match `json:"body,omitempty"`
+}
+
+// NewGetMatchOK creates GetMatchOK with default headers values
+func NewGetMatchOK() *GetMatchOK {
+
+	return &GetMatchOK{}
+}
+
+// WithPayload adds the payload to the get match o k response
+func (o *GetMatchOK) WithPayload(payload *models.Match) *GetMatchOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get match o k response
+func (o *GetMatchOK) SetPayload(payload *models.Match) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMatchOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+func (o *GetMatchOK) GetMatchResponder() {}
+
+// GetMatchBadRequestCode is the HTTP code returned for type GetMatchBadRequest
+const GetMatchBadRequestCode int = 400
+
+/*
+GetMatchBadRequest Bad Request
+
+swagger:response getMatchBadRequest
+*/
+type GetMatchBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetMatchBadRequest creates GetMatchBadRequest with default headers values
+func NewGetMatchBadRequest() *GetMatchBadRequest {
+
+	return &GetMatchBadRequest{}
+}
+
+// WithPayload adds the payload to the get match bad request response
+func (o *GetMatchBadRequest) WithPayload(payload *models.Error) *GetMatchBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get match bad request response
+func (o *GetMatchBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMatchBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+func (o *GetMatchBadRequest) GetMatchResponder() {}
+
+// GetMatchNotFoundCode is the HTTP code returned for type GetMatchNotFound
+const GetMatchNotFoundCode int = 404
+
+/*
+GetMatchNotFound Not Found
+
+swagger:response getMatchNotFound
+*/
+type GetMatchNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetMatchNotFound creates GetMatchNotFound with default headers values
+func NewGetMatchNotFound() *GetMatchNotFound {
+
+	return &GetMatchNotFound{}
+}
+
+// WithPayload adds the payload to the get match not found response
+func (o *GetMatchNotFound) WithPayload(payload *models.Error) *GetMatchNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get match not found response
+func (o *GetMatchNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMatchNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+func (o *GetMatchNotFound) GetMatchResponder() {}
+
+// GetMatchInternalServerErrorCode is the HTTP code returned for type GetMatchInternalServerError
+const GetMatchInternalServerErrorCode int = 500
+
+/*
+GetMatchInternalServerError Internal Server Error
+
+swagger:response getMatchInternalServerError
+*/
+type GetMatchInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetMatchInternalServerError creates GetMatchInternalServerError with default headers values
+func NewGetMatchInternalServerError() *GetMatchInternalServerError {
+
+	return &GetMatchInternalServerError{}
+}
+
+// WithPayload adds the payload to the get match internal server error response
+func (o *GetMatchInternalServerError) WithPayload(payload *models.Error) *GetMatchInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get match internal server error response
+func (o *GetMatchInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMatchInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+func (o *GetMatchInternalServerError) GetMatchResponder() {}
+
+type GetMatchNotImplementedResponder struct {
+	middleware.Responder
+}
+
+func (*GetMatchNotImplementedResponder) GetMatchResponder() {}
+
+func GetMatchNotImplemented() GetMatchResponder {
+	return &GetMatchNotImplementedResponder{
+		middleware.NotImplemented(
+			"operation authentication.GetMatch has not yet been implemented",
+		),
+	}
+}
+
+type GetMatchResponder interface {
+	middleware.Responder
+	GetMatchResponder()
+}
